# wanted-pre-onboarding-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  gunicorn_conf.py  nginx_Dockerfile  pyproject.toml  requirements.txt
config/: authentication.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
nginx/: Dockerfile  nginx.conf
posters/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
posters/migrations/: 0001_initial.py  0002_alter_poster_created_at_alter_poster_updated_at.py  0003_rename_content_content_text_delete_like.py  0004_alter_poster_created_at_alter_poster_updated_at_like.py  0005_delete_like.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_password.py
